Changes from jTDS 1.2.2
=======================

07/26/2009 - Holger Rehn
 o Corrected bug [2021839] savepoint starts 2 transactions if it's the first operation.

07/25/2009 - Holger Rehn
 o Applied patch [1844846] jTDS cannot connect IBM/Netcool Omnibus.

07/24/2009 - Holger Rehn
 o Applied patch [1958292] native GSS/Kerberos support for jTDS using Java 6.

07/24/2009 - Holger Rehn
 o Corrected bug [2818256] a savepoint is invalid after rollback.

07/23/2009 - Holger Rehn
 o Applied patch [2084524] and improved code, adding (experimental) ASA support
   to the driver.

06/07/2008 - Brian Heineman
 o Applied patch [2093131] JDBC 4 method stubs.

09/10/2007 - Brian Heineman
 o Applied new driver base code with TDS 9.0 support created
   by Mike Hutchinson.

===============================================================================
08/22/2007 - jTDS 1.2.2 released
===============================================================================

Changes from jTDS 1.2.1
=======================

08/18/2007 - Brian Heineman
 o Applied Mike Hutchinson's fix for bug
   [1774322] Sybase nulled text fields return not null
 
08/05/2007 - Brian Heineman
 o Applied patch [1592113] NTLMv2 properties on datasource.
 o Applied patch [1236417] 64-bit support for Single Sign On (SSO)
 o Applied patch [1504761] Itanium and AMD64/EM64T 64 bit support for SSO
 o Implemented feature [1491811] sqlState code for snapshot conflict.
 o Updated SQL Server sqlState codes.

08/02/2007 - Brian Heineman
 o Corrected bug [1765905] Driver version miscellanea is incorrect;
   updated to 1.2.2.

===============================================================================
07/12/2007 - jTDS 1.2.1 released
===============================================================================

Changes from jTDS 1.2
=====================

07/12/2007 - Brian Heineman
 o Applied patch from Alin Sinpalean for concurrent batch updates.
 o Corrected Java 1.3/1.4 compile problem.

07/11/2007 - Brian Heineman