@@ -1,6 +1,10 @@
 Changes from jTDS 1.2.2
 =======================
 
+07/28/2009 - Holger Rehn
+ o Applied patch [2675463], getSchemas() now returns schemas, not database users for
+   MSSQL 2005 and later.
+
 07/26/2009 - Holger Rehn
  o Corrected bug [2021839] savepoint starts 2 transactions if it's the first operation.
 
@@ -9,8 +13,6 @@ Changes from jTDS 1.2.2
 
 07/24/2009 - Holger Rehn
  o Applied patch [1958292] native GSS/Kerberos support for jTDS using Java 6.
-
-07/24/2009 - Holger Rehn
  o Corrected bug [2818256] a savepoint is invalid after rollback.
 
 07/23/2009 - Holger Rehn
